--- a/my-demo1/pom.xml
+++ b/my-demo1/pom.xml
@@ -38,6 +38,14 @@
             <version>1.2</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+
     </dependencies>
 
 
